--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,10 @@
     <img src="img/Ming.jpg" width="15%" style="margin-right: auto; margin-left: auto; display: block;">
     <p>เตชิต ทั้งเจริญกุล</p>
     <p>สวัสดีครับ ชื่อเล่นว่า มิ้ง มาจากจังหวัดเชียงใหม่ มหาวิทยาลัยเชียงใหม่ </p>
-    <h3 class="fonteng">Skills<h3>
+    <h3 class="fonteng">Contact<h3>
     <div class="skill-board">
-      <p1>1.แบดมินตัน <br> 2.เขียนโปรแกรมได้นิดหน่อย <br> 3.มีความรู้ทางวิศวกรรม</p1> 
+      <p1>email cmu:</p1>&nbsp;&nbsp;<a style="font-size: 20px;" href="https://outlook.office.com/mail/">tachit_th@cmu.ac.th</a>
+      <br><br><p1>เบอร์โทร 099-999-9999</p1>
     </div> 
   </body>
 </html>
