--- a/epx.html
+++ b/epx.html
@@ -11,16 +11,19 @@
     <p style="text-align: center;font-size: 150%;" >
       <a href="index.html">Home</a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="epx.html"> Experience</a>
+      <a href="epx.html">Experience</a>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="contact.html">Contact</a>
     </p>
     <img src="img/Ming.jpg" width="15%" style="margin-right: auto; margin-left: auto; display: block;">
     <p>เตชิต ทั้งเจริญกุล</p>
     <p>สวัสดีครับ ชื่อเล่นว่า มิ้ง มาจากจังหวัดเชียงใหม่ มหาวิทยาลัยเชียงใหม่ </p>
-    <h3 class="fonteng">Skills<h3>
-    <div class="skill-board">
-      <p1>1.แบดมินตัน <br> 2.เขียนโปรแกรมได้นิดหน่อย <br> 3.มีความรู้ทางวิศวกรรม</p1> 
+    <h3 class="fonteng">Experience<h3>
+    <div class="skill-board"> 
+      <h4>ประสบการณ์</h4>
+      <p1>ช่วยพ่อแม่ขายหนังสือและสุกี้</p1> 
+      <h5>งานอดิเรก</h5>
+      <p1>1.เล่นเกม <br><br> 2.ดูการ์ตูนและlive steam <br><br> 3.หาความรู้รอบตัว</p1>
     </div> 
   </body>
 </html>
